--- a/jade/index.jade
+++ b/jade/index.jade
@@ -9,8 +9,7 @@ html
     script(src='lib/ionic/js/ionic.bundle.js')
     script(src='cordova.js')
     script(src='js/app.js')
+    script(src='lib/phaser/phaser.min.js')
+    script(src='js/main.js')
   body(ng-app='ionicphaser')
-    ion-pane
-      ion-header-bar.bar-stable
-        h1.title We be putting phaser on the phone
-      ion-content
+    
